codelite (14.0+dfsg-2) UNRELEASED; urgency=medium

  * QA upload.
  * Refresh patches using quilt.
  * Add patch from upstream to fix FTBFS with Hunspell and GCC-11.
    Closes: #997219

 -- Håvard F. Aasen <havard.f.aasen@pfft.no>  Sun, 20 Feb 2022 18:18:21 +0100

codelite (14.0+dfsg-1) unstable; urgency=medium

  * QA upload.

  * New upstream release.
    - Remove the .py extension from a script with language-extension

  * d/patches:
    - Refresh patches.
    - Drop 2 patches applied upstream.
    - Make a helper script python3-compatible.

  * debian/control:
    - Bump standards to 4.5.0.
    - Change Recommends: qt4-qmake to qt5-qmake.

  * debian/lintian-overrides:
    - Add override for file-references-package-build-path false positive.

 -- David Hart <david@codelite.org>  Sat, 14 Mar 2020 16:13:10 +0000

codelite (13.0+dfsg-1) unstable; urgency=medium

  * QA upload.

  * New upstream release:
    - Add new and missing plugins to codelite-plugins.
    - Refresh patches.
    - Patch out two non-free licenced svgs.

  * debian/control:
    - Build against the GTK+3 version of wxWidgets (Closes: #934096, #940540).
    - Bump standards to 4.4.1 and remove debian/compat.
    - Add an upstream metadata file.

 -- David Hart <david@codelite.org>  Sun, 13 Oct 2019 10:10:27 +0100

codelite (12.0+dfsg-1) unstable; urgency=medium

  * QA upload.

  * New upstream release.

  * debian/codelite-plugins.install:
    - Install new plugins.
  * debian/copyright:
    - Add copyright for new plugin.
    - Update copyright dates.
  * debian/patches:
    - Refresh patches.
    - Backport a fix for LLDB terminal crashes.
    - Fix 3 more spelling mistakes.
  * debian/control:
    - Bump standards to 4.3.0.
  * debian/compat:
    - Use debhelper 11.
  * debian/watch:
    - Add oversionmangle for +dfsg

 -- David Hart <david@codelite.co.uk>  Sun, 03 Feb 2019 17:59:36 +0000

codelite (10.0+dfsg-5) unstable; urgency=medium

  * Oprhaning this package. (See: #852312)
