@@ -4,6 +4,8 @@ codelite (14.0+dfsg-2) UNRELEASED; urgency=medium
   * Refresh patches using quilt.
   * Add patch from upstream to fix FTBFS with Hunspell and GCC-11.
     Closes: #997219
+  * d/rules: Remove CMake options regarding clang, the options are
+    no longer recognised.
 
  -- Håvard F. Aasen <havard.f.aasen@pfft.no>  Sun, 20 Feb 2022 18:18:21 +0100
 
